--- a/bower.json
+++ b/bower.json
@@ -19,8 +19,9 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.2.0",
-    "things-scene-viewer": "ThingsElements/things-scene-viewer#^0.0.11",
-    "google-map": "GoogleWebComponents/google-map#^1.1.10"
+    "google-map": "GoogleWebComponents/google-map#^1.1.10",
+    "things-gmap": "ThingsElements/things-gmap",
+    "things-scene-viewer": "ThingsElements/things-scene-viewer"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
