--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "watch": "watchify src/*.js -o things-scene-gmap.js src/index.js",
+    "serve": "watchify src/*.js -o things-scene-gmap.js src/index.js & polyserve",
     "build": "browserify src/index.js -o things-scene-gmap.js && uglifyjs things-scene-gmap.js -o things-scene-gmap-min.js"
   },
   "repository": {
